--- a/_posts/2020-08-20-Java-Note-1.md
+++ b/_posts/2020-08-20-Java-Note-1.md
@@ -4,7 +4,7 @@ title:      Java Note 1
 subtitle:   Java 数据存储
 date:       2020-08-20
 author:     JH
-header-img: post-bg-universe.jpg
+header-img: post-bg-desk.jpg
 catalog: true
 tags:
     - Java Learning    
