修复背景图不显示的错误

--- a/_posts/2020-08-22-Java-Note-2.md
+++ b/_posts/2020-08-22-Java-Note-2.md
@@ -4,7 +4,7 @@ title:      Java Note 2
 subtitle:   Java 封装
 date:       2020-08-22
 author:     JH
-header-img: post-bg-desk.jpg
+header-img: img/post-bg-desk.jpg
 catalog: true
 tags:
     - Java Learning    
