--- a/_posts/2020-08-23-Java-Note-4.md
+++ b/_posts/2020-08-23-Java-Note-4.md
@@ -4,7 +4,7 @@ title:      Java Note 4
 subtitle:   Java 多态
 date:       2020-08-23
 author:     JH
-header-img: post-bg-desk.jpg
+header-img: img/post-bg-desk.jpg
 catalog: true
 tags:
     - Java Learning    
