--- a/_posts/2020-08-24-Java-Note-5.md
+++ b/_posts/2020-08-24-Java-Note-5.md
@@ -4,7 +4,7 @@ title:      Java Note 5
 subtitle:   Java 抽象类和接口
 date:       2020-08-24
 author:     JH
-header-img: post-bg-desk.jpg
+header-img: img/post-bg-desk.jpg
 catalog: true
 tags:
     - Java Learning    
