修复背景图不显示的错误

--- a/_posts/2020-08-20-Java-Note-1.md
+++ b/_posts/2020-08-20-Java-Note-1.md
@@ -4,7 +4,7 @@ title:      Java Note 1
 subtitle:   Java 数据存储
 date:       2020-08-20
 author:     JH
-header-img: img/post-bg-desk.jpg
+header-img: img/post-bg-os-metro.jpg
 catalog: true
 tags:
     - Java Learning    
