--- a/_posts/2020-08-27-Linux指令整理.md
+++ b/_posts/2020-08-27-Linux指令整理.md
@@ -19,7 +19,6 @@ tags:
     nvidia_smi 静态显卡使用情况
     watch -n 10 nvidia-smi 每 10s 显示一次显存的情况
     gpustat python查看显存使用命令，需要安装gpustat包 pip install gpustat
-    ps -eo pid,lstart,etime|grep PID 查看指定PID进程的开始时间，运行时间
     
 #### 用户进程
     ps 查看进程统计信息
@@ -27,13 +26,15 @@ tags:
         -aux 全部用户
     结合grep命令的使用
         ps aux|grep user|grep python 查看某用户的python任务信息，可更换为相应任务
+        ps -eo pid,lstart,etime|grep PID 查看指定PID进程的开始时间，运行时间
     
-    htop 动态进程
     kill PID 杀死某个进程
     
     top 实时动态地查看系统的整体运行情况
         -u [用户名]：指定用户名
         -p [进程号]：指定进程
+        
+    htop 动态后台进程
         
 #### 后台运行程序
     1. nohup bash run.sh >run.log 2>&1 &
