modified file and add some command

--- a/_posts/2020-08-27-Linux指令整理.md
+++ b/_posts/2020-08-27-Linux指令整理.md
@@ -36,9 +36,20 @@ tags:
         
     htop 动态后台进程
         
-#### 后台运行程序
+#### 后台运行
     1. nohup bash run.sh >run.log 2>&1 &
     2. exit
+
+#### 内存清理/释放命令
+    1. free -m 内存使用情况
+    2. synv 释放前同步
+    3. echo i > /proc/sys/vm/drop_caches 释放缓存
+    
+    释放缓存数字参数 i 说明
+    0 – 不释放
+    1 – 释放页缓存
+    2 – 释放dentries和inodes
+    3 – 释放所有缓存
     
 #### 常用快捷命令
     clear 清空shell
