--- a/_posts/2020-08-27-Linux指令整理.md
+++ b/_posts/2020-08-27-Linux指令整理.md
@@ -42,7 +42,7 @@ tags:
 
 #### 内存清理/释放命令
     1. free -m 内存使用情况
-    2. synv 释放前同步
+    2. sync 释放前同步
     3. echo i > /proc/sys/vm/drop_caches 释放缓存
     
     释放缓存数字参数 i 说明
