--- a/_posts/2020-08-27-Linux指令整理.md
+++ b/_posts/2020-08-27-Linux指令整理.md
@@ -60,7 +60,14 @@ tags:
     ctrl + d 退出
     
 #### 文件磁盘
+    chown username:username xxx 同时修改文件（夹）所属用户组和用户 
+    chown username xxx 修改文件（夹）所属用户组
+    
     sudo chmod -R 777 file 使file权限为所有人可读写
+    chmod [{u/g/o/a}{+-=}{rwx}] xxx 修改文件（夹）权限
+        u:user g:group o:other a:all
+    ls -l xxx 查看权限
+    
     cat filename 查看文件所有内容
     head -n file 查看文件前n行
     tail -n file 查看文件后n行
