--- a/_posts/2021-05-07-Nginx 安装与使用.md
+++ b/_posts/2021-05-07-Nginx 安装与使用.md
@@ -2,7 +2,7 @@
 layout:     post
 title:      Nginx 安装与使用
 subtitle:   网络应用
-date:       2020-05-07
+date:       2021-05-07
 author:     JH
 header-img: img/post-bg-universe.jpg
 catalog: true
@@ -15,7 +15,7 @@ tags:
 #### 系统安装
 
 
-```
+```shell
 sudo apt-get install nginx
 ```
 
