--- a/_posts/2017-02-15-Git指令整理.md
+++ b/_posts/2017-02-15-Git指令整理.md
@@ -29,7 +29,19 @@ tags:
 
 
 # 常用操作
+#### 合码冲突解决
+    1. 更新远程dev
+    git pull orgin dev
 
+    2. 合入dev
+
+    2.1 merge
+    git merge dev
+    2.2
+    git rebase ...
+
+    3. 解决冲突
+    IDE中 左移，右移操作(命令待了解)
 #### 创建仓库（初始化）
 	在当前指定目录下创建
 	git init
